# EvoNet

./: .flake8  pyproject.toml  requirements.txt
src/EvoNet/filters/: holomorphic.py
src/EvoNet/functions/: __init__.py  hypergeometric.py  spherical.py
src/EvoNet/layers/: __init__.py  activation.py  convolution.py  linear.py
tests/: test_filters.py  test_functions.py  test_layers.py  test_numpy_functions.py  test_torch_functions.py  test_torch_layers.py  test_torch_modules.py
