[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "EvoNet"
version = "0.0.1"
authors = [
  { name="Ramin Barati", email="ramin.barati@aut.ac.ir" },
]
description = "A small package that implements EvoNet"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/rekino/EvoNet"
"Bug Tracker" = "https://github.com/rekino/EvoNet/issues"